--- a/app/src/main/res/layout/content_select_ingredients.xml
+++ b/app/src/main/res/layout/content_select_ingredients.xml
@@ -30,12 +30,30 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp" />
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ChangedLook"
         android:id="@+id/textView2"
         android:layout_centerHorizontal="true"
+        android:scrollbars = "vertical"
         android:layout_below="@+id/button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:id="@+id/button2"
+        android:layout_marginTop="55dp"
+        android:layout_below="@+id/textView2"
+        android:layout_toEndOf="@+id/textView" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginTop="23dp" />
 
 </RelativeLayout>
