--- a/app/src/main/res/layout/content_select_ingredients.xml
+++ b/app/src/main/res/layout/content_select_ingredients.xml
@@ -24,7 +24,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click here"
+        android:text="add to cart"
         android:id="@+id/button"
         android:layout_below="@+id/spinner"
         android:layout_centerHorizontal="true"
@@ -32,8 +32,8 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200px"
+        android:layout_height="200px"
         android:id="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:scrollbars = "vertical"
@@ -44,9 +44,8 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/button2"
-        android:layout_marginTop="55dp"
-        android:layout_below="@+id/textView2"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_below="@+id/scrollView"
+        android:layout_alignStart="@+id/scrollView" />
 
     <ScrollView
         android:layout_width="wrap_content"
