--- a/app/src/main/res/layout/content_select_ingredients.xml
+++ b/app/src/main/res/layout/content_select_ingredients.xml
@@ -9,7 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_add_ingredients" tools:context=".AddIngredients">
 
-    <TextView android:text="Select Your Ingredients" android:layout_width="wrap_content"
+    <TextView android:text="@string/Select_Your_Ingredients" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
@@ -24,7 +24,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add to cart"
+        android:text="@string/Add_To_Cart"
         android:id="@+id/button"
         android:layout_below="@+id/spinner"
         android:layout_centerHorizontal="true"
@@ -32,8 +32,8 @@
 
 
     <TextView
-        android:layout_width="200px"
-        android:layout_height="200px"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:scrollbars = "vertical"
@@ -42,7 +42,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/Submit"
         android:id="@+id/button2"
         android:layout_below="@+id/scrollView"
         android:layout_alignStart="@+id/scrollView" />
