--- a/app/src/main/res/layout/content_select_ingredients.xml
+++ b/app/src/main/res/layout/content_select_ingredients.xml
@@ -37,7 +37,9 @@
         android:id="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:scrollbars = "vertical"
-        android:layout_below="@+id/button" />
+        android:fadeScrollbars="false"
+        android:layout_below="@+id/button"
+        android:background="#d8d3d3" />
 
     <Button
         android:layout_width="wrap_content"
