--- a/app/src/main/res/layout/content_select_ingredients.xml
+++ b/app/src/main/res/layout/content_select_ingredients.xml
@@ -15,49 +15,92 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Add_To_Cart"
-        android:id="@+id/button"
-        android:layout_below="@+id/spinner"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Submit"
-        android:id="@+id/button2"
-        android:layout_below="@+id/scrollView"
-        android:layout_alignStart="@+id/button" />
-
-    <ScrollView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/scrollView"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:scrollbars = "vertical"
-        android:fadeScrollbars="false"
-        android:background="#d8d3d3">
+    <RelativeLayout
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:id="@+id/myFrame"
+        android:layout_alignTop="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:clickable="false">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/textView4"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginLeft="0dp"
+            android:layout_alignBaseline="@+id/spinner"
+            android:layout_alignBottom="@+id/spinner"
+            android:layout_alignStart="@+id/button2" />
+
+        <ScrollView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/scrollView"
             android:scrollbars = "vertical"
             android:fadeScrollbars="false"
-            android:background="#d8d3d3" />
-    </ScrollView>
+            android:background="#d8d3d3"
+            android:layout_gravity="center"
+            android:layout_marginLeft="152dp"
+            android:layout_below="@+id/spinner"
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2"
+                android:scrollbars = "vertical"
+                android:fadeScrollbars="false"
+                android:background="#d8d3d3" />
+        </ScrollView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Submit"
+            android:id="@+id/button2"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginLeft="0dp"
+            android:layout_alignTop="@+id/button4"
+            android:layout_toStartOf="@+id/button4" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Add_To_Cart"
+            android:id="@+id/button"
+            android:layout_gravity="start|bottom"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentBottom="true"
+
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remove last item"
+            android:id="@+id/button4"
+            android:layout_gravity="end|bottom"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentBottom="true"
+
+            android:layout_alignParentEnd="true"
+            android:visibility="visible" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:layout_marginTop="72dp"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="true" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
