--- a/app/src/main/res/layout/content_ingredients_selected_view.xml
+++ b/app/src/main/res/layout/content_ingredients_selected_view.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_second"
-    tools:context="cajohnson7.cs222.bsu.edu.shoppinglist.IngredientSelector">
+    tools:context="edu.bsu.cs222.shoppingList.IngredientSelector">
 
     <TextView
         android:layout_width="400dp"
