--- a/app/src/main/res/layout/content_pick_ingredient.xml
+++ b/app/src/main/res/layout/content_pick_ingredient.xml
@@ -36,25 +36,15 @@
             android:layout_toEndOf="@+id/button"
             android:layout_marginTop="64dp" />
 
-        <ScrollView
-            android:layout_width="140dp"
-            android:layout_height="130dp"
-            android:id="@+id/scrollView"
-            android:scrollbars = "vertical"
-            android:fadeScrollbars="false"
-            android:background="#d8d3d3"
-            android:layout_gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView2"
-                android:scrollbars = "vertical"
-                android:fadeScrollbars="false"
-                android:background="#d8d3d3" />
-        </ScrollView>
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView2"
+            android:layout_alignStart="@+id/listView"
+            android:layout_alignRight="@+id/textView4"
+            android:layout_alignEnd="@+id/textView4"
+            android:layout_below="@+id/textView4"
+            android:layout_above="@+id/button2" />
 
         <Button
             android:layout_width="wrap_content"
@@ -92,9 +82,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:layout_gravity="center_horizontal|top"
-            android:layout_alignTop="@+id/textView4"
+            android:layout_alignBaseline="@+id/textView4"
+            android:layout_alignBottom="@+id/textView4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/button"
+            android:layout_alignStart="@+id/button" />
 
     </RelativeLayout>
 
