--- a/app/src/main/res/layout/content_pick_ingredient.xml
+++ b/app/src/main/res/layout/content_pick_ingredient.xml
@@ -9,19 +9,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_add_ingredients" tools:context=".AddIngredients">
 
-    <TextView android:text="@string/Select_Your_Ingredients" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
 
     <RelativeLayout
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:id="@+id/myFrame"
-        android:layout_alignTop="@+id/textView"
-        android:layout_alignStart="@+id/textView"
         android:layout_alignParentStart="true"
         android:clickable="false">
 
@@ -32,19 +24,17 @@
             android:text="@string/NoIngredientsSelected"
             android:id="@+id/textView4"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/button"
-            android:layout_marginTop="64dp" />
+            android:layout_toEndOf="@+id/button" />
 
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listView2"
-            android:layout_alignStart="@+id/listView"
-            android:layout_alignRight="@+id/textView4"
             android:layout_alignEnd="@+id/textView4"
-            android:layout_below="@+id/textView4"
-            android:layout_above="@+id/button2" />
+            android:layout_toEndOf="@+id/button"
+            android:layout_below="@+id/spinner"
+            android:layout_alignLeft="@+id/button"
+            android:layout_alignStart="@+id/button" />
 
         <Button
             android:layout_width="wrap_content"
@@ -82,18 +72,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:layout_gravity="center_horizontal|top"
-            android:layout_alignBaseline="@+id/textView4"
-            android:layout_alignBottom="@+id/textView4"
+            android:layout_below="@+id/textView4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/listView"
-            android:layout_centerVertical="true"
-            android:layout_alignLeft="@+id/button"
-            android:layout_alignStart="@+id/button" />
 
     </RelativeLayout>
 
