fix white space violation and remove buttons from view

--- a/app/src/main/res/layout/content_shopping_list_creator.xml
+++ b/app/src/main/res/layout/content_shopping_list_creator.xml
@@ -24,46 +24,14 @@
             android:text="@string/NoIngredientsSelected"
             android:id="@+id/textView4"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_toEndOf="@+id/addButton" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="false" />
 
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listView2"
-            android:layout_alignEnd="@+id/textView4"
-            android:layout_toEndOf="@+id/addButton"
-            android:layout_below="@+id/spinner"
-            android:layout_alignLeft="@+id/addButton"
-            android:layout_alignStart="@+id/addButton" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Submit"
-            android:id="@+id/button2"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_above="@+id/removeButton"
-            android:layout_centerHorizontal="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Add_To_Cart"
-            android:id="@+id/addButton"
-            android:layout_gravity="start|bottom"
-
-            android:layout_alignParentBottom="true"
-            android:layout_toStartOf="@+id/button2" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/removeLastItem"
-            android:id="@+id/removeButton"
-            android:layout_gravity="end|bottom"
-
-            android:visibility="visible"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
@@ -77,5 +45,32 @@
             android:layout_alignParentStart="true" />
 
     </RelativeLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Add_To_Cart"
+        android:id="@+id/addButton"
+        android:layout_gravity="start|bottom"
+
+        android:layout_marginLeft="29dp"
+        android:layout_marginStart="29dp"
+        android:layout_below="@+id/myFrame"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/removeLastItem"
+        android:id="@+id/removeButton"
+        android:layout_gravity="end|bottom"
+
+        android:visibility="visible"
+        android:layout_below="@+id/myFrame"
+        android:layout_alignRight="@+id/myFrame"
+        android:layout_alignEnd="@+id/myFrame"
+        android:layout_marginRight="51dp"
+        android:layout_marginEnd="51dp" />
 
 </RelativeLayout>
