--- a/app/src/main/res/layout/content_shopping_list_creator.xml
+++ b/app/src/main/res/layout/content_shopping_list_creator.xml
@@ -30,47 +30,49 @@
 
         <ListView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:id="@+id/listView2"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/spinner"
+            android:layout_above="@+id/addButton" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:layout_gravity="center_horizontal|top"
-            android:layout_below="@+id/textView4"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Add_To_Cart"
+            android:id="@+id/addButton"
+            android:layout_gravity="start|bottom"
+
+            android:layout_alignParentBottom="true"
+            android:layout_toLeftOf="@+id/removeButton"
+            android:layout_toStartOf="@+id/removeButton"
+            android:layout_marginRight="42dp"
+            android:layout_marginEnd="42dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/removeLastItem"
+            android:id="@+id/removeButton"
+            android:layout_gravity="end|bottom"
+
+            android:visibility="visible"
+            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
     </RelativeLayout>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Add_To_Cart"
-        android:id="@+id/addButton"
-        android:layout_gravity="start|bottom"
-
-        android:layout_marginLeft="29dp"
-        android:layout_marginStart="29dp"
-        android:layout_below="@+id/myFrame"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/removeLastItem"
-        android:id="@+id/removeButton"
-        android:layout_gravity="end|bottom"
-
-        android:visibility="visible"
-        android:layout_below="@+id/myFrame"
-        android:layout_alignRight="@+id/myFrame"
-        android:layout_alignEnd="@+id/myFrame"
-        android:layout_marginRight="51dp"
-        android:layout_marginEnd="51dp" />
 
 </RelativeLayout>
