--- a/app/src/main/res/layout/content_shopping_list_creator.xml
+++ b/app/src/main/res/layout/content_shopping_list_creator.xml
@@ -35,16 +35,17 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/spinner"
-            android:layout_above="@+id/addButton" />
+            android:layout_above="@+id/addButton"
+            android:fadeScrollbars="false" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:layout_gravity="center_horizontal|top"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView4" />
 
         <Button
             android:layout_width="wrap_content"
